--- a/index.html
+++ b/index.html
@@ -69,8 +69,18 @@
         </div>
     </div>
 </div>
+
   <script src="script.js"></script>
   <script src="usermove.js"></script>
   <script src="compmove.js"></script>
+
+  <script>
+    if('serviceWorker' in navigator) {
+      navigator.serviceWorker.register('/sw.js')
+        .then(function() {
+              console.log('Service Worker Registered');
+        });
+    }
+  </script>
 </body>
 </html>
