--- a/index.html
+++ b/index.html
@@ -79,6 +79,8 @@
       navigator.serviceWorker.register('/sw.js')
         .then(function() {
               console.log('Service Worker Registered');
+        }).catch(err=>{
+            console.log(err);
         });
     }
   </script>
