--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       navigator.serviceWorker.register('/sw.js')
         .then(function() {
               console.log('Service Worker Registered');
-        }).catch(err=>{
+        }).catch((err) => {
             console.log(err);
         });
     }
