Button tag changed

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <p id = "inputIsEmpty" style="font-size: 0.8em;"></p>
                 </div>
                 <div class="modal-footer">
-                    <button id = "usernamebtn" type="submit" class="btn">Start</button>
+                    <button id = "usernamebtn" type="button" class="btn">Start</button>
                 </div>
             </div>
         </div>
